--- a/client_socket.io.html
+++ b/client_socket.io.html
@@ -29,7 +29,7 @@
           if(!(joueurs.length==2)){
             token=-1;
             console.log("token a -1");
-          }// a modifier
+          }// a modifier jme souviens plus trop quoi modifier dsl je demanderai à pompidor vendredi matin
           document.getElementById("players").innerHTML=data;
 
         });//affiche la liste des joueurs quand il recoit un signal de sortie
